# HPC_PNLA_Library_OpenMP

./: .gitignore  CMakeLists.txt  HPC_Lab_WiSe 2020_21.pptx  README.md
cmake/: CompilerFlags.cmake
doc/: Doxyfile
example/: CMakeLists.txt  FD_linear_system.cpp  FD_linear_system.h  HelloCluster.cpp  HelloNode.cpp  develop.cpp  my_utilities.cpp  my_utilities.h  poisson_2d.cpp  poisson_2d_slurm  slurm_HelloCluster  slurm_HelloNode  slurm_poisson_2d
include/: CRS_Matrix.h  CRS_Matrix_omp.h  PCG_Solver.h  vector_omp.h  vector_seq.h
src/: CRS_Matrix.cpp  CRS_Matrix_omp.cpp  PCG_Solver.cpp  vector_omp.cpp  vector_seq.cpp
tests/: CMakeLists.txt  CMakeLists_CRS_Matrix.txt  CMakelists_CRS_Matrix.txt  test_CRS_Matrix.cpp  test_vectors.cpp
tests_CRS_Matrix/: CMakeLists.txt  CMakelists_CRS_Matrix.txt  test_CRS_Matrix.cpp
